Bug Database and looking up each bug you're interested in.

	http://bugs.sun.com

Bug IDs that start with "GF" can be found in the GlassFish Issue Tracker
(after removing the "GF"):

	https://glassfish.dev.java.net/issues


		  CHANGES IN THE 1.4.3 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.3 release.

6850882	IMAPMessage returns wrong getMessageNumber() from messageRemovedEvent
6857090	JavaMail is not sending HELO / EHLO according to specs
6872072	QPEncoderStream write method eats up trailing white space of a string
6875367	LineOutputStream wraps IOException instead of throwing it directly
6829124	IMAPFolder deadlock using IMAP IDLE
GF 9941	SMTPTransport violates RFC 2821 in HELO command
<no id>	add starttls support to POP3
<no id>	add mail.transport.protocol.<address-type> property
<no id>	fail POP3Folder.open if STAT command fails
<no id>	fix POP3Folder.isOpen if POP3 server fails and is then reconnected
<no id>	better handle modifying messages created from input streams
<no id>	include server error message in exception when SMTP authentication fails
<no id>	InternetAddress verifies domain per RFC1034 instead of RFC822 in strict
<no id>	com.sun.mail.util.logging.MailHandler contributed by Jason Mehrens
<no id>	add mail.smtp.noop.strict property, default true


		  CHANGES IN THE 1.4.2 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.2 release.

6621377	unexpected result when uuencode data has any line starting with
	"END" characters
6629213	base64 encoder sometimes omits CRLF
6670275	headers may not end up on top where they belong
6671855	list on IMAP folder that can contain both messages and folders
	might fail if folder is open
6672359	SMTPTransport notifying both partially delivered and
	not delivered methods
6676257	cannot specify two custom ssl socket factories for starttls usage
6679333	missing quotes around zero length parameter values