@@ -13,11 +13,12 @@ Bug IDs that start with "GF" can be found in the GlassFish Issue Tracker
 		  ----------------------------
 The following bugs have been fixed in the 1.4.3 release.
 
+6829124	IMAPFolder deadlock using IMAP IDLE
 6850882	IMAPMessage returns wrong getMessageNumber() from messageRemovedEvent
 6857090	JavaMail is not sending HELO / EHLO according to specs
 6872072	QPEncoderStream write method eats up trailing white space of a string
 6875367	LineOutputStream wraps IOException instead of throwing it directly
-6829124	IMAPFolder deadlock using IMAP IDLE
+6890265	SMTPTransport does not close socket if STARTTLS is req'd but not sup'd
 GF 9941	SMTPTransport violates RFC 2821 in HELO command
 <no id>	add starttls support to POP3
 <no id>	add mail.transport.protocol.<address-type> property
